Fix multicol p spacing

--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -131,8 +131,7 @@ ul li.multicolumn-list__item.has-bg--color:last-child {
   line-height: calc(1 + 0.5 / max(1, var(--font-heading-scale)));
 }
 
-.multicolumn-list h3,
-.multicolumn-list p {
+.multicolumn-list h3 {
   margin: 0;
 }
 
